--- a/src/app/components/user/profile/profile-seller/profile-seller.component.css
+++ b/src/app/components/user/profile/profile-seller/profile-seller.component.css
@@ -168,6 +168,90 @@
   }
   .checkout-button {
     float: none;
-    margin:20px 0 0 0;
+    margin:0 0 0 0;
   }
+}
+
+.input-style {
+  font-size: 0.85em;
+  font-weight: 600;
+  text-align: center;
+  width:150px;
+  line-height: 35px;
+  /*background: #eee;*/
+  color:#7b7b7b;
+  margin: 2px;
+  background: transparent;
+  border: none;
+}
+
+.quick-cart-footer {
+  display: table;
+  width: 100%;
+  border-bottom: 1px solid #e4e4e4;
+}
+button {
+  display: inline-block;
+  padding: 0 30px;
+  color: white;
+  text-align: center;
+  font-size: 0.85em;
+  font-weight: 600;
+  letter-spacing: .15rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 1px solid #3b3d38;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+/*.button.button-primary {*/
+/*color: #fff;*/
+/*background-color: #3b3d38;*/
+/*border-color: #3b3d38;*/
+/*}*/
+/*.button.button-primary:hover {*/
+/*color: #fff;*/
+/*background-color: #52525b;*/
+/*border-color: #52525b;*/
+/*}*/
+.button.button-secondary {
+  color: #1d1d20;
+  background-color: #fff;
+  border-color: #1d1d20;
+}
+.button.button-secondary:hover {
+  color: #fff;
+  background-color: #8e8e90;
+  border-color: #8e8e90;
+}
+.button.button-wide {
+  width: 80%;
+}
+.button.button-large {
+  padding: 10px 10px;
+}
+
+
+.cart-buttons {
+  padding:20px 0;
+}
+
+.div1{
+  -moz-background-size:auto;
+  -webkit-background-size:auto;
+  -o-background-size:auto;
+  background-size:auto;
+  background-image: url(../../../../../assets/imgs/sakura-plate-bowl_1.jpg);
+}
+
+.quick-cart-footer-pro {
+  display: table;
+  width: 100%;
+}
+
+.quick-cart-footer-pro {
+  display: table;
+  width: 100%;
 }
