--- a/src/app/components/user/profile/profile-seller/profile-seller.component.html
+++ b/src/app/components/user/profile/profile-seller/profile-seller.component.html
@@ -40,7 +40,7 @@
               </div>
 
               <div class="quick-cart-footer-cell">
-                <button class="button button-secondary button-wide button-large" routerLink="/">Logout</button>
+                <button class="button button-secondary button-wide button-large" routerLink="/login/{{userType}}" (click)="logout()" >Logout</button>
               </div>
             </div>
 
