--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="quick-cart-footer-cell">
-        <button class="button button-secondary button-wide-profile button-large" routerLink="/">Logout</button>
+        <button class="button button-secondary button-wide-profile button-large" routerLink="/login/{{userType}}" (click)="logout()"  >Logout</button>
         </div>
       </div>
           <div class="quick-cart-footer-cell" style="position: relative; width: 60%; height: 20px; left: 50%; top:40px; margin: 0 0 0 -30%">
