--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -20,7 +20,7 @@
     <div class="quick-cart-footer" style="position: absolute; width: 60%; height: 300px; left: 50%; top:400px; margin: 0 0 0 -25%">
 
     <button class="button button-secondary button-wide button-large" (click)="register()">Register</button>
-    <button class="button button-secondary button-wide button-large" routerLink="/login">Cancel</button>
+    <button class="button button-secondary button-wide button-large" routerLink="/login/{{userType}}">Cancel</button>
     </div>
   </form>
 </div>
