--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -14,7 +14,7 @@
       <div class="image-container">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/imgs/' + product.image + ')'}"></div>
         <div class="overlay">
-          <div class="button button-primary" [routerLink]="['../products',i+1]">View Details</div>
+          <div class="button button-primary" [routerLink]="['./products',i+1]">View Details</div>
           <div class="button button-primary" (click)="addToCart(product)">Add To Cart</div>
         </div>
       </div>
