--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -4,7 +4,8 @@
     <div class="header-text">
       <div class="header-text-title">Plates</div>
       <p>
-        My Items List
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec mollis sem. Etiam id luctus libero.
+        Vivamus vulputate urna eget velit iaculis, et interdum elit pellentesque. Duis porta nunc neque, nec volutpat erat lacinia a.
       </p>
     </div>
   </div>
@@ -15,7 +16,7 @@
       <div class="image-container-list">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/imgs/' + product.image + ')'}"></div>
         <div class="overlay">
-          <div class="button button-primary" [routerLink]="['../product',i+1]">Edit Details</div>
+          <div class="button button-primary" [routerLink]="['./product',i+1]">Edit Details</div>
         </div>
       </div>
       <div class="product-details">
