--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
 
 <div class="wrapper">
 
-  <top-bar></top-bar>
+  <!--<top-bar></top-bar>-->
   <div class="main-panel">
     <router-outlet></router-outlet>
   </div>
