--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,4 +1,27 @@
 
+<top-bar></top-bar>
+<!--<nav class="row cart-total" style="background: transparent">-->
+  <!--<div class="container-fluid row">-->
+    <!--<div class="pull-left">-->
+      <!--<a routerLink="./"-->
+         <!--class="navbar-text right-margin">-->
+        <!--BACK-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class="pull-right">-->
+      <!--<button routerLink="/register"-->
+      <!--class="btn bordered button-wide">-->
+      <!--Register-->
+      <!--</button>-->
+      <!--<button routerLink="/"-->
+      <!--class="right-margin btn bordered blue-text">-->
+      <!--Visit as Guest-->
+      <!--</button>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
+
+
 <div class="header-image">
     <div class="header-block">
       <div class="header-text">
@@ -8,6 +31,7 @@
         <p></p>
         <br/>
         <br/>
+        <!--<form class="cart-page-content" (ngSubmit)="login()" #f="ngForm">-->
         <form class="cart-page-content" (ngSubmit)="login()" #f="ngForm">
 
             <label class="text">Username</label>
